force-app/main/default/objects/Branch_Master__c/fields/Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Branch_City__c</fullName>
    <label>Branch City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>