force-app/main/default/objects/Branch_Master__c/fields/Branch_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Queue_Id__c</fullName>
    <label>Branch  Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>