force-app/main/default/objects/Branch_Master__c/fields/Branch_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Queue_Name__c</fullName>
    <label>Branch Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>