force-app/main/default/objects/Branch_Master__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Business_Unit__c,&quot;ABSLI&quot;), &quot;ABSLI&quot;, &quot;&quot;)</defaultValue>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>