force-app/main/default/objects/Branch_Master__c/fields/CRM_SPOC__c.field-meta.xml
<CustomField>
    <fullName>CRM_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Masters_CRM_Spoc</relationshipName>
    <type>Lookup</type>
</CustomField>