force-app/main/default/objects/Branch_Master__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Business_Unit__c,&quot;ABSLI&quot;), &quot;ABSLI&quot;, &quot;&quot;)</defaultValue>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOB</valueSetName>
    </valueSet>
</CustomField>