force-app/main/default/objects/Branch_Master__c/fields/NSM_CH_BH_Name__c.field-meta.xml
<CustomField>
    <fullName>NSM_CH_BH_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSM/CH/BH Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Masters3</relationshipName>
    <type>Lookup</type>
</CustomField>