force-app/main/default/objects/Branch_Master__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Queue Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>