force-app/main/default/objects/Branch_Master__c/fields/ROM_AOM__c.field-meta.xml
<CustomField>
    <fullName>ROM_AOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ROM AOM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>