force-app/main/default/objects/Branch_Master__c/fields/Source_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Modified_Date__c</fullName>
    <label>Source Modified Date</label>
    <type>DateTime</type>
</CustomField>