force-app/main/default/objects/Branch_Master__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Business_Unit__c,&quot;ABSLI&quot;), &quot;ACTIVE&quot;, &quot;&quot;)</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>IN-ACTIVE</fullName>
            </value>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>