force-app/main/default/objects/Branch_Master__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>UniqueKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>