force-app/main/default/objects/Branch_Master__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>