force-app/main/default/objects/Branch_Master__c/fields/ZSM_TH_Name__c.field-meta.xml
<CustomField>
    <fullName>ZSM_TH_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZSM/TH Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_Masters2</relationshipName>
    <type>Lookup</type>
</CustomField>