force-app/main/default/objects/Branch_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_City__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_State__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>